--- a/FuriganaConverter/Base.lproj/LaunchScreen.storyboard
+++ b/FuriganaConverter/Base.lproj/LaunchScreen.storyboard
@@ -1,7 +1,9 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+    <device id="retina5_9" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -11,15 +13,58 @@
             <objects>
                 <viewController id="01J-lp-oVM" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ORT-Ji-T4H">
+                                <rect key="frame" x="0.0" y="729" width="375" height="49"/>
+                                <items/>
+                            </toolbar>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NnU-qf-0zs">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                                <color key="backgroundColor" name="LaunchScreenNavigationBarColor"/>
+                            </view>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KbY-Lo-5rg">
+                                <rect key="frame" x="0.0" y="44" width="375" height="44"/>
+                                <items>
+                                    <navigationItem id="Rfr-Uz-au3">
+                                        <nil key="title"/>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="sgoo" translatesAutoresizingMaskIntoConstraints="NO" id="Uzw-IC-C5c">
+                                <rect key="frame" x="16" y="296.66666666666669" width="343" height="219.00000000000006"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="KbY-Lo-5rg" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="Cvc-XS-8AE"/>
+                            <constraint firstItem="Uzw-IC-C5c" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" constant="16" id="Ho5-3Z-Sea"/>
+                            <constraint firstItem="Uzw-IC-C5c" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="Oeo-La-9a6"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="NnU-qf-0zs" secondAttribute="trailing" id="QWK-wP-BcQ"/>
+                            <constraint firstItem="ORT-Ji-T4H" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="V20-rA-Phx"/>
+                            <constraint firstItem="ORT-Ji-T4H" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="WfL-5p-5G9"/>
+                            <constraint firstItem="ORT-Ji-T4H" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="g9i-6W-kEO"/>
+                            <constraint firstItem="NnU-qf-0zs" firstAttribute="bottom" secondItem="KbY-Lo-5rg" secondAttribute="bottom" constant="-44" id="irM-9o-ydG"/>
+                            <constraint firstItem="KbY-Lo-5rg" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="jkV-83-yNf"/>
+                            <constraint firstItem="KbY-Lo-5rg" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="lHA-5P-5tX"/>
+                            <constraint firstItem="NnU-qf-0zs" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="moi-Ht-J0Y"/>
+                            <constraint firstItem="NnU-qf-0zs" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="oob-sv-b5U"/>
+                            <constraint firstItem="Uzw-IC-C5c" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="rLE-rf-Kue"/>
+                            <constraint firstAttribute="trailing" secondItem="Uzw-IC-C5c" secondAttribute="trailing" constant="16" id="ySK-gj-3Kt"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52" y="374.6305418719212"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="sgoo" width="522" height="219"/>
+        <namedColor name="LaunchScreenNavigationBarColor">
+            <color red="0.97647058823529409" green="0.97254901960784312" blue="0.97647058823529409" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
